--- a/.github/ISSUE_TEMPLATE/2-event.yaml
+++ b/.github/ISSUE_TEMPLATE/2-event.yaml
@@ -25,5 +25,5 @@ body:
         - [ ] Назначена дата
         - [ ] Готовы описание и программа мероприятия
         - [ ] Анонс в social media и ресурсах сообщества
-        ' [ ] Анонс в группах
+        - [ ] Анонс в группах
     
