--- a/.github/ISSUE_TEMPLATE/2-event.yaml
+++ b/.github/ISSUE_TEMPLATE/2-event.yaml
@@ -21,9 +21,9 @@ body:
       label: Чеклист для организаторов
       description: "Список задач, которые надо решить"
       value: >
-        - [ ] Назначен(а) координатор
-        - [ ] Назначена дата
-        - [ ] Готовы описание и программа мероприятия
-        - [ ] Анонс в social media и ресурсах сообщества
+        - [ ] Назначен(а) координатор <br/>
+        - [ ] Назначена дата <br/>
+        - [ ] Готовы описание и программа мероприятия <br/>
+        - [ ] Анонс в social media и ресурсах сообщества <br/>
         - [ ] Анонс в группах
     
